--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,107 @@
-body {
+/* Importación de estilos base de TailwindCSS */
+@tailwind base;
+
+/* Estilos para los componentes predefinidos de TailwindCSS */
+@tailwind components;
+
+/* Utilidades personalizadas de TailwindCSS */
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  font-family: 'Inter Variable', sans-serif;
+  letter-spacing:-0.01em;
+    font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --font-size: 1.1rem;
+  --background-color: #fff;
+  --color: #000;
+  --background:rgba(255, 255, 255, 1);
+  --opacity:0.4;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #000;
+    --color: #fff;
+    --background:rgba(0, 0, 0, 1);
+  }
+}
+
+body, p, h1, h2, h3, a {
+  font-size: var(--font-size);
+  line-height: 1;
+  background-color: var(--background-color);
+  color: var(--color);
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+  text-size-adjust: none;
+}
+
+a{
+  text-decoration:none;
+  transition: opacity 0.4s ease-out, transform 0.4s ease-out;
+}
+
+a:hover{
+opacity:0.4;
+
+}
+
+.container {
+   padding-top:5vh;
+  width: 100%;
+  margin: 0 auto;
+}
+
+/* Define the animation keyframes */
+@keyframes fadeInSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeOutSlideDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+/* Initially hide content to prevent flashing */
+.content {
+  opacity: 0;
+  transform: translateY(20px);
+  visibility: hidden; /* Hide content initially */
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+/* Show content with fade-in and slide-up animation */
+.content.visible {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible; /* Make content visible */
+  animation: fadeInSlideUp 0.6s ease-out forwards;
+}
+
+/* Hide content with fade-out and slide-down animation */
+.content.hidden {
+  opacity: 0;
+  transform: translateY(20px);
+  visibility: hidden; /* Hide content */
+  animation: fadeOutSlideDown 0.6s ease-in forwards;
 }
